fix: Menu should be sticky on mobile

--- a/src/styles/ui/menu.scss
+++ b/src/styles/ui/menu.scss
@@ -1,6 +1,8 @@
 .menu-container {
-  @media screen and (min-width: 976px) {
     position: sticky;
+    top: 0px;
+    z-index: 10001;
+  @media screen and (min-width: 976px) {
     top: 24px;
     height: calc(100vh - 48px) !important;
   }
